...

  return (
    <SafeAreaView style={{ flex: 1 }}>
      <ScrollView style={[styles.Container]}>
        <View style={styles.ContentContainer}>
          <Text style={[styles.Heading]}>
            <Trans>Products</Trans>
          </Text>
          {!isError ? (
            isPending ? (
              <View style={styles.ProductContainer}>
                {[0, 1, 2, 3, 4, 5, 6, 7].map((item, index) => (
                  <ProductCardSkeleton key={index} />
...
