...
      ) : (
        <TouchableOpacity
          style={styles.AddToCartButton}
          onPress={handleMultiVariantAddToCart}
          activeOpacity={0.7}
        >
          <Text style={styles.AddToCartText}>Add to cart</Text>
        </TouchableOpacity>
      )}
    </View>
  );
}

...
