...
  );
  const colorScheme = useColorScheme();

  const onSuccessAddToCart = () => {
    Toast.show({
      type: "success",
      text1: "Product added to cart",
      position: "bottom",
      bottomOffset: 60,
    });
  };

  const onSuccessRemoveFromCart = () => {
...
