...
          ]}
        >
          <UniTextInput
            onSubmitEditing={handleSubmit}
            ref={inputRef}
            style={styles.SearchInput}
            placeholder={t`Search...`}
            value={search}
            onChangeText={searchProducts}
            autoCapitalize="none"
            returnKeyType="search"
          />
        </Animated.View>

        <TouchableOpacity
          onPress={() =>
            searchBarOpen && search !== "" ? setSearch("") : toggleSearch()
          }
          accessibilityLabel="Press to open search bar"
        >
          <Icon
            name={
              searchBarOpen && search !== "" ? "close-sharp" : "search-sharp"
            }
            size={24}
...
