...
              initialVariantId={product!.data!.product?.selectedVariant?.id}
            >
              <Product search={search} />
            </ProductProvider>
            <View style={styles.recommendedContainer}>
              <Text style={[styles.recommendedHeading, { color: textColor }]}>
                Recommended
              </Text>
              {recommended?.data?.productRecommendations && (
                <FlatList
                  data={recommended.data.productRecommendations}
                  renderItem={({ item }) => <RecommendedProduct item={item} />}
                  keyExtractor={(item) => item.id}
...
